# imap-cli

./: .gitignore  CLAUDE.md  pyproject.toml  tox.ini
docs/: conf.py
imap_cli/: config.py  fetch.py  string.py
imap_cli/scripts/: imap_api.py  imap_notify.py
imap_cli/tests/: __init__.py  test_config.py
specs/001-python3-modernize-tooling/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python3-modernize-tooling/checklists/: requirements.md
